[tool.poetry]
name = "qaguru-9-18-1"
version = "0.1.0"
description = "homework"
authors = ["magrarita"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selene = "2.0.0rc2"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
